--- a/views/common/header.html
+++ b/views/common/header.html
@@ -12,6 +12,8 @@
     <link rel="next" href="https://epsiode/page/2/" />
     <link rel="shortcut icon" type="image/x-icon" href="/static/logo.png"
           media="screen"/>
+    <meta name="viewport"
+          content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel='stylesheet' id='wp-block-library-css' href='https://watchtvepisodes.me/wp-includes/css/dist/block-library/style.min.css' type='text/css' media='all' />
     <link rel='stylesheet' id='contact-form-7-css' href='https://watchtvepisodes.me/wp-content/plugins/contact-form-7/includes/css/styles.css' type='text/css' media='all' />
     <link rel='stylesheet' id='owl-carousel-css' href='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/css/front.owl.css' type='text/css' media='all' />
@@ -27,7 +29,6 @@
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/owlcarousel.js'></script>
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/idtabs.js'></script>
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/lib/isrepeater.js'></script>
-
     <script type='text/javascript' src='https://watchtvepisodes.me/wp-content/themes/dooplay/assets/js/min/front.ajax.2.2.0.js'></script>
    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="https://watchtvepisodes.me/wp-includes/wlwmanifest.xml" />
     <script type='text/javascript'>jQuery(document).ready(function(a) {
@@ -62,11 +63,18 @@
                         <li id="menu-item-97537" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-97537">
                             <a href="/home" aria-current="page">Zuhause</a></li>
                         <li id="menu-item-16" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-16">
-                            <a href="/movies">
-                                Show</a>
+                            <a href="/movies">Show</a>
+                            <ul class="sub-menu">
+                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies">Nach Bewertung &nbsp;&nbsp;&nbsp;&nbsp;sortieren</a></li>
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies/random">zufällige Show</a></li>
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies/lasted">dauerte Show</a></li>
+                            </ul>
                         </li>
                         <li id="menu-item-24" class="genres menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24">
-                            <a href="/genre/action/">Genre</a>
+                            <a href="/movies">Genre</a>
                             <ul class="sub-menu">
                                 <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
                                     <a href="/movies/tags/Aktion">Aktion</a></li>
@@ -122,9 +130,9 @@
         <header class="responsive">
             <div class="nav"><a class="aresp nav-resp"></a></div>
             <div class="search"><a class="aresp search-resp"></a></div>
-            <div class="logo"><a href="https://watchtvepisodes.me/"><img
-                            src='https://watchtvepisodes.me/wp-content/uploads/2018/11/logo1.png'
-                            alt='WatchTVEpisodes | Watch Openload Movies Tv Shows Online For Free'/></a></div>
+            <div class="logo"><a href="/home"><img
+                            src='/static/logo.png'
+                            alt='logo'/></a></div>
         </header>
         <div class="search_responsive">
             <form method="get" id="form-search-resp" class="form-resp-ab" action="https://watchtvepisodes.me"><input
@@ -137,22 +145,53 @@
             <div class="menu">
                 <div class="menu-meniu-sus-container">
                     <ul id="main_header" class="resp">
-                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-97537"><a href="/">Home</a>
+                        <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-97537"><a href="/home">Zuhause</a>
                         </li>
                         <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current-menu-ancestor current-menu-parent menu-item-has-children menu-item-16">
-                            <a href="/movies" aria-current="page">Shows</a>
+                            <a href="/movies" aria-current="page">Show</a>
+                            <ul class="sub-menu">
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies">Nach Bewertung &nbsp;&nbsp;&nbsp;&nbsp;sortieren</a></li>
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies/random">zufällige Show</a></li>
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies/lasted">dauerte Show</a></li>
+                            </ul>
                         </li>
                         <li class="genres menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-24">
-                            <a href="/genre/action/">Genre</a>
+                            <a href="/movies">Genre</a>
                             <ul class="sub-menu">
-                                <li class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4953"><a
-                                            href="https://watchtvepisodes.me/genre/adventure/">Adventure</a></li>
-                                <li class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4972"><a
-                                            href="https://watchtvepisodes.me/genre/talk/">Talk</a></li>
-                                <li class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4973"><a
-                                            href="https://watchtvepisodes.me/genre/thriller/">Thriller</a></li>
-                                <li class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4974"><a
-                                            href="https://watchtvepisodes.me/genre/tv-movie/">TV Movie</a></li>
+                                <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                    <a href="/movies/tags/Aktion">Aktion</a></li>
+                                <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
+                                    <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
+                                <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
+                                    <a href="/movies/tags/Komödie">Komödie</a></li>
+                                <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
+                                    <a href="/movies/tags/Theater">Theater</a></li>
+                                <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
+                                    <a href="/movies/tags/Fantasie">Fantasie</a></li>
+                                <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
+                                    <a href="/movies/tags/Harem">Harem</a></li>
+                                <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
+                                    <a href="/movies/tags/Historisches">Historisches
+                                    </a></li>
+                                <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
+                                    <a href="/movies/tags/Idole">Idole</a></li>
+                                <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
+                                    <a href="/movies/tags/Isekai">Isekai</a></li>
+                                <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
+                                    <a href="/movies/tags/Magische">Magische</a></li>
+                                <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
+                                    <a href="/movies/tags/Mädchen">Mädchen</a></li>
+                                <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
+                                    <a href="/movies/tags/Mecha">Mecha</a></li>
+                                <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
+                                    <a href="/movies/tags/Musik">Musik</a></li>
+                                <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
+                                    <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
+                                <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
+                                    <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -160,3 +199,9 @@
             </div>
         </div>
     </div>
+    <style>
+        header.main .hbox .logo img {
+            width: auto;
+            height: 45px;
+        }
+    </style>
