--- a/views/home.html
+++ b/views/home.html
@@ -1,28 +1,38 @@
 {{template "common/header.html"}}
     <div id="contenedor">
-        <div class="login_box">
-            <div class="box">
-                <a id="c_loginbox">
-                    <i class="icon-close2"></i>
-                </a>
-                <h3>Login to your account</h3>
-                <form method="post" action="https://watchtvepisodes.me/warlam/">
-                    <fieldset class="user">
-                        <input type="text" name="log" placeholder="Username"></fieldset>
-                    <fieldset class="password">
-                        <input type="password" name="pwd" placeholder="Password"></fieldset>
-                    <label>
-                        <input name="rememberme" type="checkbox" id="rememberme" value="forever">Remember Me</label>
-                    <fieldset class="submit">
-                        <input type="submit" value="Log in"></fieldset>
-                    <a class="register" href="https://watchtvepisodes.me/account-3/?action=sign-in">Register a new account</a>
-                    <label>
-                        <a class="pteks" href="https://watchtvepisodes.me/warlam/?action=lostpassword">Lost your password?</a></label>
-                    <input type="hidden" name="redirect_to" value="https://watchtvepisodes.me/"></form>
-            </div>
         </div>
         <div class="module">
             <div class="content">
+                <header><h2>Featured TV Shows</h2>
+                    <div class="nav_items_module">
+                        <a class="btn prevf">
+                            <i class="icon-caret-left"></i>
+                        </a>
+                        <a class="btn nextf"><i class="icon-caret-right">
+                            </i>
+                        </a>
+                    </div>
+                </header>
+                <div id="featured-titles" class="items featured owl-carousel owl-theme" style="opacity: 1; display: block;">
+                            {{range .headerMovie}}
+                                <article id="post-featured-9189" class="item tvshows">
+                                    <div class="poster"><img src="{{.ImgUrl}}" alt="{{.MovieName}}">
+                                        <div class="rating"><span class="icon-star2"></span> {{.MovieMark}}</div>
+                                        <div class="featu">Featured</div>
+                                        <a href="/episode/{{.Id}}">
+                                            <div class="see"></div>
+                                        </a></div>
+                                    <div class="data dfeatur">
+                                        <div class="mark"><i class="icon-local_play"></i></div>
+                                        <h3>
+                                            <a href="/episode/{{.Id}}">
+                                               {{.MovieName}}</a>
+                                        </h3>
+                                    </div>
+                                </article>
+                            {{end}}
+                </div>
+
                 <div id="featload" class="load_modules">Loading..</div>
                 <style>.rpwe-block ul{list-style:none !important;margin-left:0 !important;padding-left:0 !important;width:100%;height:770px;box-shadow:0 8px 8px 0 rgba(0,0,0,0.2),0 12px 30px 0 rgba(0,0,0,0.19)}.rpwe-block li{border-bottom:1px solid rgba(255,255,255,0);margin-bottom:4px;padding-bottom:1px;list-style-type:none;border-radius:25px;background:#21212180;padding-left:10px}.rpwe-block a{display:inline !important;text-decoration:none}.rpwe-block h3{background:none !important;clear:none;margin-bottom:0 !important;margin-top:0 !important;font-weight:400;font-size:15px !important;line-height:1.5em;text-align:center}.rpwe-thumb{border:1px solid #eee !important;box-shadow:none !important;margin:2px 10px 2px 0;padding:3px !important}.rpwe-summary{font-size:12px}.rpwe-time{color:#ffffff;font-size:12px;text-align:right}.rpwe-comment{color:#bbb;font-size:11px;padding-left:5px}.rpwe-alignleft{display:inline;float:left}.rpwe-alignright{display:inline;float:right}.rpwe-aligncenter{display:block;margin-left:auto;margin-right:auto}.rpwe-clearfix:before,.rpwe-clearfix:after{content:"";display:table !important}.rpwe-clearfix:after{clear:both}.rpwe-clearfix{zoom:1}</style>
                 <header>
@@ -60,7 +70,139 @@
                             <img width="300" height="169" src="{{randomImg}}" class="image wp-image-93020 attachment-medium size-medium" alt="" style="max-width: 100%; height: auto;" sizes="(max-width: 300px) 100vw, 300px" /></a>
                     </aside>
                   </div>
+                <div class="dt_mainmeta">
+                    <nav class="genres"><h2>Genre</h2>
+                        <ul class="genres scrolling">
+                            <li id="menu-item-8799" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-8799">
+                                <a href="/movies/tags/Aktion">Aktion</a></li>
+                            <li id="menu-item-73949" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73949">
+                                <a href="/movies/tags/Abenteuer">Abenteuer</a></li>
+                            <li id="menu-item-73955" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-73955">
+                                <a href="/movies/tags/Komödie">Komödie</a></li>
+                            <li id="menu-item-4971" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4971">
+                                <a href="/movies/tags/Theater">Theater</a></li>
+                            <li id="menu-item-4970" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4970">
+                                <a href="/movies/tags/Fantasie">Fantasie</a></li>
+                            <li id="menu-item-4969" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4969">
+                                <a href="/movies/tags/Harem">Harem</a></li>
+                            <li id="menu-item-4968" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4968">
+                                <a href="/movies/tags/Historisches">Historisches
+                                </a></li>
+                            <li id="menu-item-4967" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4967">
+                                <a href="/movies/tags/Idole">Idole</a></li>
+                            <li id="menu-item-4966" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4966">
+                                <a href="/movies/tags/Isekai">Isekai</a></li>
+                            <li id="menu-item-4965" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4965">
+                                <a href="/movies/tags/Magische">Magische</a></li>
+                            <li id="menu-item-4964" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4964">
+                                <a href="/movies/tags/Mädchen">Mädchen</a></li>
+                            <li id="menu-item-4963" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4963">
+                                <a href="/movies/tags/Mecha">Mecha</a></li>
+                            <li id="menu-item-4962" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4962">
+                                <a href="/movies/tags/Musik">Musik</a></li>
+                            <li id="menu-item-4961" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4961">
+                                <a href="/movies/tags/Geheimnis">Geheimnis</a></li>
+                            <li id="menu-item-4960" class="menu-item menu-item-type-taxonomy menu-item-object-genres menu-item-4960">
+                                <a href="/movies/tags/apokalyptischen">apokalyptischen</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
+<script type='text/javascript'>jQuery(document).ready(function ($) {
+        $('#featured-titles').owlCarousel({
+            autoPlay: 3500,
+            items: 7,
+            stopOnHover: true,
+            pagination: false,
+            itemsDesktop: [1199, 4],
+            itemsDesktopSmall: [980, 4],
+            itemsTablet: [768, 3],
+            itemsTabletSmall: false,
+            itemsMobile: [479, 2]
+        });
+        $('.nextf').click(function () {
+            $('#featured-titles').trigger('owl.next')
+        });
+        $('.prevf').click(function () {
+            $('#featured-titles').trigger('owl.prev')
+        });
+        $('#dt-episodes').owlCarousel({
+            autoPlay: false,
+            pagination: false,
+            items: 3,
+            stopOnHover: true,
+            itemsDesktop: [900, 3],
+            itemsDesktopSmall: [750, 3],
+            itemsTablet: [500, 2],
+            itemsMobile: [320, 1]
+        });
+        $('.next').click(function () {
+            $('#dt-episodes').trigger('owl.next')
+        });
+        $('.prev').click(function () {
+            $('#dt-episodes').trigger('owl.prev')
+        });
+        $('#dt-seasons').owlCarousel({
+            autoPlay: false,
+            items: 5,
+            stopOnHover: true,
+            pagination: false,
+            itemsDesktop: [1199, 5],
+            itemsDesktopSmall: [980, 5],
+            itemsTablet: [768, 4],
+            itemsTabletSmall: false,
+            itemsMobile: [479, 3]
+        });
+        $('.next2').click(function () {
+            $('#dt-seasons').trigger('owl.next')
+        });
+        $('.prev2').click(function () {
+            $('#dt-seasons').trigger('owl.prev')
+        });
+        $('#slider-movies').owlCarousel({
+            autoPlay: false,
+            items: 2,
+            stopOnHover: true,
+            pagination: true,
+            itemsDesktop: [1199, 2],
+            itemsDesktopSmall: [980, 2],
+            itemsTablet: [768, 2],
+            itemsTabletSmall: [600, 1],
+            itemsMobile: [479, 1]
+        });
+        $('#slider-tvshows').owlCarousel({
+            autoPlay: false,
+            items: 2,
+            stopOnHover: true,
+            pagination: true,
+            itemsDesktop: [1199, 2],
+            itemsDesktopSmall: [980, 2],
+            itemsTablet: [768, 2],
+            itemsTabletSmall: [600, 1],
+            itemsMobile: [479, 1]
+        });
+        $('#slider-movies-tvshows').owlCarousel({
+            autoPlay: false,
+            items: 2,
+            stopOnHover: true,
+            pagination: true,
+            itemsDesktop: [1199, 2],
+            itemsDesktopSmall: [980, 2],
+            itemsTablet: [768, 2],
+            itemsTabletSmall: [600, 1],
+            itemsMobile: [479, 1]
+        });
+        $('.reset').click(function (event) {
+            if (!confirm(dtGonza.reset_all)) {
+                event.preventDefault()
+            }
+        });
+        $('.addcontent').click(function (event) {
+            if (!confirm(dtGonza.manually_content)) {
+                event.preventDefault()
+            }
+        });
+    });</script>
 {{template "common/footer.html"}}
